# fruitfly-courtship

./: .gitignore  README.md  launch_pose_tools.txt  pyproject.toml
config/: level1_rules.yaml  v2_rules.yaml
fruitfly_courtship/: cli.py  config.py  detectors.py  features.py  intervals.py  pose_io.py  reporting.py
tests/: test_cli.py  test_cli_placeholder.py  test_config.py  test_detectors.py  test_features.py  test_intervals.py  test_pose_io.py  test_reporting.py
