[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fruitfly-courtship"
version = "0.1.0"
description = "Rule-based Drosophila courtship behavior detection from pose coordinates"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fruitfly-courtship = "fruitfly_courtship.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["fruitfly_courtship*"]
exclude = ["config*", "docs*", "output*", "tests*", "tmp*"]
